fix: z-index for active slide in project-list

--- a/src/pages/about/_styles.pcss
+++ b/src/pages/about/_styles.pcss
@@ -37,7 +37,7 @@
 
 .cont {
   position: relative;
-  z-index: 5;
+  z-index: var(--z-cont);
 }
 
 .desc {
