--- a/src/pages/layout/_styles.pcss
+++ b/src/pages/layout/_styles.pcss
@@ -22,7 +22,7 @@
 
   & > footer {
     flex: 0 0 auto;
-    z-index: 10;
+    z-index: var(--z-layout);
 
     & a {
       margin-right: 20px;
@@ -47,7 +47,7 @@
   background-color: var(--c_bg);
   height: calc(60rem/var(--f_size));
   transition: all .5s ease-in;
-  z-index: 10;
+  z-index: var(--z-layout);
 
   & > section {
     position: relative;
