--- a/src/pages/prj-list/_styles.pcss
+++ b/src/pages/prj-list/_styles.pcss
@@ -42,11 +42,11 @@
 .next {
   position: absolute;
   right: 0; top: 0;
-  z-index: 10;
+  z-index: var(--z-cont);
 }
 
 .prev {
   position: absolute;
   left: 0; top: 0;
-  z-index: 10;
+  z-index: var(--z-cont);
 }
